--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,8 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="10"
-        android:background="@color/txt_signup">
+        android:background="@color/txt_signup"
+        android:weightSum="10">
 
         <ImageButton
             android:id="@+id/btnBackToLogin"
@@ -35,7 +35,7 @@
                 android:layout_gravity="center"
                 android:text="Thông tin khách hàng"
                 android:textColor="@color/backgroundColor"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
         </android.support.v7.widget.Toolbar>
 
         <ImageButton
@@ -43,52 +43,57 @@
             style="@style/SaveButton"
             android:layout_weight="1"
             android:minHeight="?attr/actionBarSize"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
     </LinearLayout>
 
 
-    <TextView
-        style="@style/NormalTextView"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="5dp"
-        android:text="Họ và tên: " />
-
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/text_input_fullname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp">
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
+        android:focusableInTouchMode="true"
+        app:errorTextAppearance="@style/TextLabelError"
+        app:hintTextAppearance="@style/TextLabelHint">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/fullNameEdt"
-            style="@style/UnameEditText1" />
+            style="@style/UnameEditText1"
+            android:hint="Họ tên" />
     </android.support.design.widget.TextInputLayout>
-
-    <TextView
-        style="@style/NormalTextView"
-        android:layout_marginStart="13dp"
-        android:text="Số điện thoại" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_input_phoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp">
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="15dp"
+        app:errorTextAppearance="@style/TextLabelError"
+        app:hintTextAppearance="@style/TextLabelHint">
+
+        <!--<EditText-->
+        <!--android:id="@+id/phoneNumberEdt"-->
+        <!--style="@style/PhoneNumberEditText"-->
+        <!--android:hint="Số điện thoại" />-->
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/phoneNumberEdt"
-            style="@style/PhoneNumberEditText" />
+            style="@style/PhoneNumberEditText"
+            android:hint="Số điện thoại" />
     </android.support.design.widget.TextInputLayout>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_marginStart="13dp"
             android:id="@+id/txtEmail"
             style="@style/NormalTextView"
+            android:layout_marginStart="13dp"
             android:text="Email: " />
 
         <TextView
