--- a/app/src/main/res/layout/fragment_product_management.xml
+++ b/app/src/main/res/layout/fragment_product_management.xml
@@ -48,6 +48,12 @@
     </LinearLayout>
 
 
+    <Spinner
+        android:id="@+id/spnStoreName"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rclProductList"
         android:layout_width="match_parent"
