--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -70,9 +70,10 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rclImage"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="15dp">
+            android:layout_marginStart="15dp"
+            android:layout_weight="7.5">
 
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
