--- a/app/src/main/res/layout/edt_addstore.xml
+++ b/app/src/main/res/layout/edt_addstore.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/storeNameLayout"
+    >
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_input_fullname"
         android:layout_width="match_parent"
@@ -14,7 +16,7 @@
         android:focusableInTouchMode="true">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/fullNameEdt"
+            android:id="@+id/storeNameEdt"
             style="@style/UnameEditText1"
             android:hint="Tên của hàng" />
     </android.support.design.widget.TextInputLayout>
