--- a/app/src/main/res/layout/content_item_product.xml
+++ b/app/src/main/res/layout/content_item_product.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
-            android:layout_weight="4.5"
+            android:layout_weight="6"
             android:text="Coca" />
 
 
@@ -33,9 +33,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center"
             android:layout_marginEnd="10dp"
-            android:layout_weight="3.5"
-            android:text="Cập nhật thành công"
+            android:layout_weight="2"
+            android:text="Ok"
             android:textColor="@color/colorGoogle" />
     </LinearLayout>
 
