--- a/app/src/main/res/layout/fragment_product_management.xml
+++ b/app/src/main/res/layout/fragment_product_management.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".fragment.ProductManagementFragment">
 
@@ -51,7 +52,10 @@
     <Spinner
         android:id="@+id/spnStoreName"
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:background="@drawable/bg_spinner"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"/>
 
 
     <android.support.v7.widget.RecyclerView
@@ -59,7 +63,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp">
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="55dp">
 
     </android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
