--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/backgroundColor">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +13,7 @@
 
         <ImageButton
             android:id="@+id/btnBack"
-            style="@style/BackButton2"
+            style="@style/BackButton"
             android:layout_weight="1"
             android:minHeight="?attr/actionBarSize" />
 
@@ -21,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="8"
-            android:background="@color/txt_signup"
+            android:background="@color/white"
             android:minHeight="?attr/actionBarSize">
 
 
@@ -32,7 +33,7 @@
 
                 android:layout_gravity="center"
                 android:text="Đổi mật khẩu"
-                android:textColor="@color/backgroundColor"
+                android:textColor="@color/colorBlack"
                 android:textSize="20dp" />
 
         </android.support.v7.widget.Toolbar>
@@ -43,6 +44,19 @@
             android:layout_weight="1"
             android:minHeight="?attr/actionBarSize" />
     </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <!-- **** Place Your Content Here **** -->
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/toolbar_dropshadow" />
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
