--- a/app/src/main/res/layout/activity_image_library.xml
+++ b/app/src/main/res/layout/activity_image_library.xml
@@ -3,32 +3,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     android:orientation="vertical"
     tools:context=".fragment.ImageLibraryFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:weightSum="10">
+
+        <ImageButton
+            style="@style/SaveButton"
+            android:layout_weight="1"
+            android:minHeight="?attr/actionBarSize"
+            android:src="@drawable/icons8_trash_24" />
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/txt_signup"
+            android:layout_weight="8"
+            android:background="@color/white"
             android:minHeight="?attr/actionBarSize">
 
             <TextView
                 android:id="@+id/toolbar_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
                 android:layout_gravity="center"
                 android:text="Thư viện ảnh"
-                android:textColor="@color/backgroundColor"
+                android:textColor="@color/colorBlack"
                 android:textSize="20dp" />
 
         </android.support.v7.widget.Toolbar>
 
+        <ImageButton
+            android:id="@+id/btnSave"
+            style="@style/SaveButton"
+            android:layout_weight="1"
+            android:minHeight="?attr/actionBarSize" />
+
     </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/toolbar_dropshadow" />
+
+    </FrameLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rclImage"
