--- a/app/src/main/res/layout/activity_introduce.xml
+++ b/app/src/main/res/layout/activity_introduce.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="5">
+    android:weightSum="5"
+    android:background="@color/backgroundColor">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,12 +35,7 @@
             android:textColor="@color/colorBlack"
             android:textSize="20sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/introduce2"
-            android:textAlignment="center"
-            android:textSize="17sp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -47,10 +43,10 @@
         android:layout_height="0dp"
         android:layout_weight="1.25"
         android:orientation="vertical">
-        <Button
-            android:id="@+id/btnSignup"
-            style="@style/SignupButton"
-            android:layout_marginBottom="15dp"/>
+        <!--<Button-->
+            <!--android:id="@+id/btnSignup"-->
+            <!--style="@style/SignupButton"-->
+            <!--android:layout_marginBottom="15dp"/>-->
         <Button
             android:id="@+id/btnLogin"
             style="@style/LoginButton" />
