--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.ProductDetailActivity">
+    tools:context=".activity.ProductDetailActivity"
+    android:background="@color/backgroundColor">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +15,7 @@
 
         <ImageButton
             android:id="@+id/btnBack"
-            style="@style/BackButton2"
+            style="@style/BackButton"
             android:layout_weight="1"
             android:minHeight="?attr/actionBarSize" />
 
@@ -23,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="8"
-            android:background="@color/txt_signup"
+            android:background="@color/white"
             android:minHeight="?attr/actionBarSize">
 
             <TextView
@@ -33,7 +34,7 @@
 
                 android:layout_gravity="center"
                 android:text="Chi tiết sản phẩm"
-                android:textColor="@color/backgroundColor"
+                android:textColor="@color/colorBlack"
                 android:textSize="19dp" />
 
         </android.support.v7.widget.Toolbar>
@@ -45,6 +46,17 @@
             android:minHeight="?attr/actionBarSize"
             android:src="@drawable/icons8_trash_24" />
     </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/toolbar_dropshadow" />
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -93,7 +105,8 @@
         <android.support.design.widget.TextInputEditText
             android:id="@+id/productName_Edt"
             style="@style/UnameEditText1"
-            android:hint="Tên sản phẩm" />
+            android:hint="Tên sản phẩm"
+            />
     </android.support.design.widget.TextInputLayout>
 
 
@@ -114,23 +127,6 @@
             android:hint="Mã SKU" />
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_input_product_description_Edt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="15dp"
-        android:focusableInTouchMode="true"
-        app:errorTextAppearance="@style/TextLabelError"
-        app:hintTextAppearance="@style/TextLabelHint">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/product_description_Edt"
-            style="@style/UnameEditText1"
-            android:hint="Mô tả" />
-    </android.support.design.widget.TextInputLayout>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -142,7 +138,7 @@
             android:layout_marginStart="13dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
-            android:text="Trạng thái hiển thị trên Shopee: " />
+            android:text="Số ảnh trong sản phẩm " />
 
 
         <TextView
@@ -154,29 +150,33 @@
             android:layout_marginEnd="10dp"
             android:layout_toEndOf="@id/txtStatusNote"
             android:gravity="center"
-            android:text="Thành công"
+            android:text="0"
             android:textColor="@color/colorGoogle" />
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1"
-        android:gravity="center|bottom"
-        android:orientation="vertical"
-        android:layout_marginBottom="20dp">
+        android:layout_height="match_parent"
+        android:gravity="bottom|center"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnUpdateItemImg"
-            style="@style/LoginButton"
+        <LinearLayout
+            android:id="@+id/updateItemImg_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center"
-            android:text="Cập nhật lên Shopee"
-            android:textAllCaps="false"/>
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/selector_more_options"
+            android:gravity="center"
+            android:minHeight="?attr/actionBarSize">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cập nhật lên Shopee"
+                android:textSize="20sp"
+                android:textColor="@color/Warning_TextView" />
+        </LinearLayout>
 
 
     </LinearLayout>
-
-
 </LinearLayout>
