--- a/app/src/main/res/layout/content_item_img_library.xml
+++ b/app/src/main/res/layout/content_item_img_library.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginTop="2dp"
-    android:layout_width="100dp"
+    android:layout_width="70dp"
     android:layout_height="80dp"
     android:background="@color/backgroundColor"
-    android:gravity="center">
+    android:gravity="center"
+    android:clickable="true"
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/imgItemProduct"
