--- a/app/src/main/res/layout/content_item_product.xml
+++ b/app/src/main/res/layout/content_item_product.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/backgroundColor">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,8 +15,7 @@
             android:id="@+id/image_product"
             android:layout_width="0dp"
             android:layout_height="80dp"
-            android:layout_weight="2"
-            android:src="@drawable/coca" />
+            android:layout_weight="2" />
 
 
         <TextView
