--- a/app/src/main/res/layout/content_item_store.xml
+++ b/app/src/main/res/layout/content_item_store.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/backgroundColor">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,8 +13,7 @@
             android:id="@+id/imgShop"
             android:layout_width="0dp"
             android:layout_height="80dp"
-            android:layout_weight="2"
-            android:src="@drawable/coca" />
+            android:layout_weight="2" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -26,14 +26,16 @@
                 android:id="@+id/txtShopName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Coca" />
+                android:text="Coca"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/txtShopSite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="htttps://shopee.vn/shop/9415363"
-                android:textColor="@color/txt_signup" />
+                android:textColor="@color/txt_signup"
+                android:autoLink="web"/>
 
 
         </LinearLayout>
