--- a/app/src/main/res/layout/fragment_image_library.xml
+++ b/app/src/main/res/layout/fragment_image_library.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".fragment.ImageLibraryFragment"
-    android:orientation="vertical">
+    android:background="@color/backgroundColor">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,8 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="8"
-            android:background="@color/txt_signup"
-            android:minHeight="?attr/actionBarSize">
+            android:minHeight="?attr/actionBarSize"
+            android:background="@color/white">
 
 
             <TextView
@@ -34,19 +35,43 @@
 
                 android:layout_gravity="center"
                 android:text="Thư viện ảnh"
-                android:textColor="@color/backgroundColor"
+                android:textColor="@color/colorBlack"
                 android:textSize="20dp" />
 
         </android.support.v7.widget.Toolbar>
 
         <ImageButton
-            android:id="@+id/btnSavePassword"
             style="@style/SaveButton"
             android:layout_weight="1"
+            android:background="@color/white"
             android:minHeight="?attr/actionBarSize"
-            android:src="@drawable/ic_arrow_back_blue_30dp" />
+            android:src="@drawable/ic_arrow_back_white_30dp" />
+
     </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <!-- **** Place Your Content Here **** -->
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/toolbar_dropshadow" />
+
+    </FrameLayout>
+
+    <Spinner
+        android:id="@+id/spnStoreName"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:background="@drawable/bg_spinner" />
+
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rclImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="55dp">
