--- a/app/src/main/res/layout/fragment_overview_store.xml
+++ b/app/src/main/res/layout/fragment_overview_store.xml
@@ -2,28 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/backgroundColor">
 
 
     <LinearLayout
+        android:id="@+id/toolbarTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="10"
-        android:background="@color/txt_signup">
-
-        <ImageButton
-            android:id="@+id/addStoreBtn"
-            style="@style/BackButton3"
-            android:layout_weight="1"
-            android:minHeight="?attr/actionBarSize" />
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="8"
-            android:background="@color/txt_signup"
-            android:minHeight="?attr/actionBarSize">
+            android:minHeight="?attr/actionBarSize"
+            android:background="@color/white">
+
 
             <TextView
                 android:id="@+id/toolbar_title"
@@ -32,17 +26,23 @@
 
                 android:layout_gravity="center"
                 android:text="Tổng quan gian hàng"
-                android:textColor="@color/backgroundColor"
-                android:textSize="19dp" />
+                android:textColor="@color/colorBlack"
+                android:textSize="20dp" />
 
         </android.support.v7.widget.Toolbar>
 
-        <ImageButton
-            style="@style/SaveButton"
-            android:layout_weight="1"
-            android:minHeight="?attr/actionBarSize"
-            android:visibility="invisible"/>
     </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/toolbar_dropshadow" />
+
+    </FrameLayout>
 
     <android.support.v7.widget.RecyclerView
 
