--- a/app/src/main/res/layout/fragment_product_management.xml
+++ b/app/src/main/res/layout/fragment_product_management.xml
@@ -5,27 +5,20 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".fragment.ProductManagementFragment">
+    tools:context=".fragment.ProductManagementFragment"
+    android:background="@color/backgroundColor">
 
     <LinearLayout
+        android:id="@+id/toolbarTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="10">
-
-        <ImageButton
-            android:id="@+id/addProductBtn"
-            style="@style/BackButton3"
-            android:layout_weight="1"
-            android:minHeight="?attr/actionBarSize" />
-
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="8"
-            android:background="@color/txt_signup"
-            android:minHeight="?attr/actionBarSize">
+            android:minHeight="?attr/actionBarSize"
+            android:background="@color/white">
 
 
             <TextView
@@ -35,18 +28,23 @@
 
                 android:layout_gravity="center"
                 android:text="Sản phẩm"
-                android:textColor="@color/backgroundColor"
+                android:textColor="@color/colorBlack"
                 android:textSize="20dp" />
 
         </android.support.v7.widget.Toolbar>
 
-        <ImageButton
-            android:id="@+id/btnSavePassword"
-            style="@style/SaveButton"
-            android:layout_weight="1"
-            android:minHeight="?attr/actionBarSize"
-            android:src="@drawable/ic_search_black_32dp" />
     </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/toolbar_dropshadow" />
+
+    </FrameLayout>
 
 
     <Spinner
